Added: website + styles

--- a/views/index.html
+++ b/views/index.html
@@ -1,1 +1,150 @@
-<h1> Hello World! </h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Eric Adamski</title>
+    <meta name="description" content="a desciption of your website.">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+
+    <link rel="stylesheet"
+          href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
+
+    <link rel="stylesheet"
+          href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+
+    <!-- Our Stylesheets -->
+    <link rel="stylesheet"
+          href="stylesheets/header.css">
+    <link rel="stylesheet"
+          href="stylesheets/intro.css">
+    <link rel="stylesheet"
+          href="stylesheets/about.css">
+    <link rel="stylesheet"
+          href="stylesheets/contact.css">
+    <link rel="stylesheet"
+          href="stylesheets/footer.css">
+  </head>
+  <body>
+    <div class="container">
+      <div class="header clearfix">
+        <nav>
+          <ul class="nav nav-pills pull-xs-right">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Contact</a>
+            </li>
+          </ul>
+        </nav>
+        <h3 class="text-muted">Eric Adamski</h3>
+      </div>
+
+      <div class="jumbotron">
+        <h1 class="display-3">IT'S ME!</h1>
+        <p class="lead">some interesting lead message to welcome people to your site!</p>
+      </div>
+
+      <div id="about" class="row marketing">
+        <h2 class="display-4">Projects</h2>
+        <div class="col-lg-6">
+          <div class="card">
+            <div class="card-block">
+              <h4 class="card-title">Card title</h4>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <a href="#" class="card-link">See Project</a>
+            </div>
+            <img class="card-img-bottom img-fluid" src="https://snap-photos.s3.amazonaws.com/img-thumbs/960w/RT92YJ1XDQ.jpg" alt="Card image cap">
+          </div>
+
+          <div class="card">
+            <div class="card-block">
+              <h4 class="card-title">Card title</h4>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <a href="#" class="card-link">See Project</a>
+            </div>
+            <img class="card-img-bottom img-fluid" src="https://snap-photos.s3.amazonaws.com/img-thumbs/960w/1B3S40UM1N.jpg" alt="Card image cap">
+          </div>
+
+          <div class="card">
+            <div class="card-block">
+              <h4 class="card-title">Card title</h4>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <a href="#" class="card-link">See Project</a>
+            </div>
+            <img class="card-img-bottom img-fluid" src="https://snap-photos.s3.amazonaws.com/img-thumbs/960w/E9J942MYLS.jpg" alt="Card image cap">
+          </div>
+        </div>
+
+        <div class="col-lg-6">
+          <div class="card">
+            <div class="card-block">
+              <h4 class="card-title">Card title</h4>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <a href="#" class="card-link">See Project</a>
+            </div>
+            <img class="card-img-bottom img-fluid" src="https://snap-photos.s3.amazonaws.com/img-thumbs/960w/RT92YJ1XDQ.jpg" alt="Card image cap">
+          </div>
+
+          <div class="card">
+            <div class="card-block">
+              <h4 class="card-title">Card title</h4>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <a href="#" class="card-link">See Project</a>
+            </div>
+            <img class="card-img-bottom img-fluid" src="https://snap-photos.s3.amazonaws.com/img-thumbs/960w/1B3S40UM1N.jpg" alt="Card image cap">
+          </div>
+
+          <div class="card">
+            <div class="card-block">
+              <h4 class="card-title">Card title</h4>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <a href="#" class="card-link">See Project</a>
+            </div>
+            <img class="card-img-bottom img-fluid" src="https://snap-photos.s3.amazonaws.com/img-thumbs/960w/E9J942MYLS.jpg" alt="Card image cap">
+          </div>
+        </div>
+      </div>
+      <div id="contact" class="row">
+        <h2 class="display-4">Contact Me</h2>
+        <ul class="_social-media">
+          <li>
+            <a href="#">
+              <i class="icon ion-ios-email-outline"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="icon ion-social-twitter-outline"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="icon ion-social-facebook-outline"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="icon ion-social-instagram-outline"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="icon ion-social-github"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <footer class="footer">
+        <p>&copy; YOU 2016</p>
+      </footer>
+    </div>
+    <!-- Scripts -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script>
+  </body>
+</html>
