--- a/views/index.html
+++ b/views/index.html
@@ -15,15 +15,7 @@
 
     <!-- Our Stylesheets -->
     <link rel="stylesheet"
-          href="stylesheets/header.css">
-    <link rel="stylesheet"
-          href="stylesheets/intro.css">
-    <link rel="stylesheet"
-          href="stylesheets/about.css">
-    <link rel="stylesheet"
-          href="stylesheets/contact.css">
-    <link rel="stylesheet"
-          href="stylesheets/footer.css">
+          href="dist/css/style.min.css">
   </head>
   <body>
     <div class="container">
